// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getSemverFromNpaResult should extract version from alias type 1`] = `
{
  "inputSpec": "my-lodash@npm:lodash@4.17.21",
  "semver": "4.17.21",
}
`;

exports[`getSemverFromNpaResult should extract version from range type 1`] = `
{
  "inputSpec": "lodash@^4.17.0",
  "semver": "^4.17.0",
}
`;

exports[`getSemverFromNpaResult should extract version from tag type 1`] = `
{
  "inputSpec": "lodash@beta",
  "semver": "beta",
}
`;

exports[`getSemverFromNpaResult should extract version from version type 1`] = `
{
  "inputSpec": "lodash@4.17.21",
  "semver": "4.17.21",
}
`;

exports[`getSemverFromNpaResult should return latest for package without version 1`] = `
{
  "inputSpec": "lodash",
  "semver": "*",
}
`;

exports[`npa alias packages should parse npm alias 1`] = `
{
  "inputSpec": "my-lodash@npm:lodash@4.17.21",
  "result": {
    "escapedName": "my-lodash",
    "fetchSpec": null,
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": undefined,
    "name": "my-lodash",
    "raw": "my-lodash@npm:lodash@4.17.21",
    "rawSpec": "npm:lodash@4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "subSpec": {
      "escapedName": "lodash",
      "fetchSpec": "4.17.21",
      "gitCommittish": undefined,
      "gitRange": undefined,
      "gitSubdir": undefined,
      "name": "lodash",
      "raw": "lodash@4.17.21",
      "rawSpec": "4.17.21",
      "registry": true,
      "saveSpec": null,
      "scope": undefined,
      "type": "version",
      "where": undefined,
    },
    "type": "alias",
    "where": undefined,
  },
}
`;

exports[`npa git packages should parse GitHub URL 1`] = `
{
  "inputSpec": "github:bluelovers/ws-yarn-workspaces",
  "result": {
    "escapedName": undefined,
    "fetchSpec": null,
    "gitCommittish": null,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": GitHost {
      "auth": null,
      "blobpath": "blob",
      "browseblobtemplate": [Function],
      "browsetemplate": [Function],
      "browsetreetemplate": [Function],
      "bugstemplate": [Function],
      "committish": null,
      "default": "shortcut",
      "docstemplate": [Function],
      "domain": "github.com",
      "editpath": "edit",
      "edittemplate": [Function],
      "extract": [Function],
      "filetemplate": [Function],
      "gittemplate": [Function],
      "hashformat": [Function],
      "httpstemplate": [Function],
      "opts": {
        "noCommittish": true,
        "noGitPlus": true,
      },
      "pathtemplate": [Function],
      "project": "ws-yarn-workspaces",
      "protocols": [
        "git:",
        "http:",
        "git+ssh:",
        "git+https:",
        "ssh:",
        "https:",
      ],
      "shortcuttemplate": [Function],
      "sshtemplate": [Function],
      "sshurltemplate": [Function],
      "tarballtemplate": [Function],
      "treepath": "tree",
      "type": "github",
      "user": "bluelovers",
    },
    "name": undefined,
    "raw": "github:bluelovers/ws-yarn-workspaces",
    "rawSpec": "github:bluelovers/ws-yarn-workspaces",
    "registry": undefined,
    "saveSpec": "github:bluelovers/ws-yarn-workspaces",
    "scope": undefined,
    "type": "git",
    "where": undefined,
  },
}
`;

exports[`npa git packages should parse GitHub shorthand 1`] = `
{
  "inputSpec": "bluelovers/ws-yarn-workspaces",
  "result": {
    "escapedName": undefined,
    "fetchSpec": null,
    "gitCommittish": null,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": GitHost {
      "auth": null,
      "blobpath": "blob",
      "browseblobtemplate": [Function],
      "browsetemplate": [Function],
      "browsetreetemplate": [Function],
      "bugstemplate": [Function],
      "committish": null,
      "default": "shortcut",
      "docstemplate": [Function],
      "domain": "github.com",
      "editpath": "edit",
      "edittemplate": [Function],
      "extract": [Function],
      "filetemplate": [Function],
      "gittemplate": [Function],
      "hashformat": [Function],
      "httpstemplate": [Function],
      "opts": {
        "noCommittish": true,
        "noGitPlus": true,
      },
      "pathtemplate": [Function],
      "project": "ws-yarn-workspaces",
      "protocols": [
        "git:",
        "http:",
        "git+ssh:",
        "git+https:",
        "ssh:",
        "https:",
      ],
      "shortcuttemplate": [Function],
      "sshtemplate": [Function],
      "sshurltemplate": [Function],
      "tarballtemplate": [Function],
      "treepath": "tree",
      "type": "github",
      "user": "bluelovers",
    },
    "name": undefined,
    "raw": "bluelovers/ws-yarn-workspaces",
    "rawSpec": "bluelovers/ws-yarn-workspaces",
    "registry": undefined,
    "saveSpec": "github:bluelovers/ws-yarn-workspaces",
    "scope": undefined,
    "type": "git",
    "where": undefined,
  },
}
`;

exports[`npa git packages should parse GitHub shorthand with package name 1`] = `
{
  "inputSpec": "ws-yarn-workspaces@bluelovers/ws-yarn-workspaces",
  "result": {
    "escapedName": "ws-yarn-workspaces",
    "fetchSpec": null,
    "gitCommittish": null,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": GitHost {
      "auth": null,
      "blobpath": "blob",
      "browseblobtemplate": [Function],
      "browsetemplate": [Function],
      "browsetreetemplate": [Function],
      "bugstemplate": [Function],
      "committish": null,
      "default": "shortcut",
      "docstemplate": [Function],
      "domain": "github.com",
      "editpath": "edit",
      "edittemplate": [Function],
      "extract": [Function],
      "filetemplate": [Function],
      "gittemplate": [Function],
      "hashformat": [Function],
      "httpstemplate": [Function],
      "opts": {
        "noCommittish": true,
        "noGitPlus": true,
      },
      "pathtemplate": [Function],
      "project": "ws-yarn-workspaces",
      "protocols": [
        "git:",
        "http:",
        "git+ssh:",
        "git+https:",
        "ssh:",
        "https:",
      ],
      "shortcuttemplate": [Function],
      "sshtemplate": [Function],
      "sshurltemplate": [Function],
      "tarballtemplate": [Function],
      "treepath": "tree",
      "type": "github",
      "user": "bluelovers",
    },
    "name": "ws-yarn-workspaces",
    "raw": "ws-yarn-workspaces@bluelovers/ws-yarn-workspaces",
    "rawSpec": "bluelovers/ws-yarn-workspaces",
    "registry": undefined,
    "saveSpec": "github:bluelovers/ws-yarn-workspaces",
    "scope": undefined,
    "type": "git",
    "where": undefined,
  },
}
`;

exports[`npa scoped packages should parse scoped package with range 1`] = `
{
  "inputSpec": "@types/node@^18.0.0",
  "result": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "^18.0.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": undefined,
    "name": "@types/node",
    "raw": "@types/node@^18.0.0",
    "rawSpec": "^18.0.0",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`npa scoped packages should parse scoped package with version 1`] = `
{
  "inputSpec": "@types/node@18.0.0",
  "result": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "18.0.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": undefined,
    "name": "@types/node",
    "raw": "@types/node@18.0.0",
    "rawSpec": "18.0.0",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "version",
    "where": undefined,
  },
}
`;

exports[`npa scoped packages should parse scoped package without version 1`] = `
{
  "inputSpec": "@types/node",
  "result": {
    "escapedName": "@types%2fnode",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": undefined,
    "name": "@types/node",
    "raw": "@types/node",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": "@types",
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`npa simple packages should parse package name with exact version 1`] = `
{
  "inputSpec": "lodash@4.17.21",
  "result": {
    "escapedName": "lodash",
    "fetchSpec": "4.17.21",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": undefined,
    "name": "lodash",
    "raw": "lodash@4.17.21",
    "rawSpec": "4.17.21",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "version",
    "where": undefined,
  },
}
`;

exports[`npa simple packages should parse package name with tag 1`] = `
{
  "inputSpec": "lodash@beta",
  "result": {
    "escapedName": "lodash",
    "fetchSpec": "beta",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": undefined,
    "name": "lodash",
    "raw": "lodash@beta",
    "rawSpec": "beta",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "tag",
    "where": undefined,
  },
}
`;

exports[`npa simple packages should parse package name with version range 1`] = `
{
  "inputSpec": "lodash@^4.17.0",
  "result": {
    "escapedName": "lodash",
    "fetchSpec": "^4.17.0",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "hosted": undefined,
    "name": "lodash",
    "raw": "lodash@^4.17.0",
    "rawSpec": "^4.17.0",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`npa simple packages should parse package name without version 1`] = `
{
  "inputSpec": "lodash",
  "result": {
    "escapedName": "lodash",
    "fetchSpec": "*",
    "gitCommittish": undefined,
    "gitRange": undefined,
    "gitSubdir": undefined,
    "name": "lodash",
    "raw": "lodash",
    "rawSpec": "*",
    "registry": true,
    "saveSpec": null,
    "scope": undefined,
    "type": "range",
    "where": undefined,
  },
}
`;

exports[`npaTry should return result for valid package 1`] = `
{
  "escapedName": "lodash",
  "fetchSpec": "4.17.21",
  "gitCommittish": undefined,
  "gitRange": undefined,
  "gitSubdir": undefined,
  "name": "lodash",
  "raw": "lodash@4.17.21",
  "rawSpec": "4.17.21",
  "registry": true,
  "saveSpec": null,
  "scope": undefined,
  "type": "version",
  "where": undefined,
}
`;
